src/components/layout.css
* {
  padding: 0;
  margin: 0;
  border: 0;
  outline: 0;
  background-color: inherit;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  box-shadow: none;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Josefin Sans", sans-serif;
  line-height: 1.5;
  color: var(--clr-fg);
  background-color: var(--clr-bg);
}

.light {
  --clr-bg: #fcfcfc;
  --clr-bg-alt: #fff;
  --clr-fg: #555;
  --clr-fg-alt: #444;
  --clr-primary: #2978b5;
  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

.dark {
  --clr-bg: #151721;
  --clr-bg-alt: #0063d5;
  --clr-fg: #e3e3ea;
  --clr-fg-alt: #ebebee;
  --clr-primary: #0c7dff;
  --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}

::-moz-selection {
  background: var(--clr-primary);
  color: var(--clr-bg);
}

::-webkit-selection,
::selection {
  background: var(--clr-primary);
  color: var(--clr-bg);
}

h1,
h2,
h3,
h4 {
  line-height: 1.2;
  color: var(--clr-fg-alt);
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 2.2rem;
  font-weight: 900;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.3rem;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

button {
  cursor: pointer;
}

@media (max-width: 900px) {
  h1 {
    font-size: 2.6rem;
  }
}

/*===================
  buttons and links
===================*/

.link {
  color: var(--clr-primary);
  padding: 0 0 0.3em 0;
  position: relative;
}

.link:hover {
  color: var(--clr-primary);
}

.link::before {
  content: "";
  display: inline;
  width: 0%;
  height: 0.2em;
  position: absolute;
  bottom: 0;
  background-color: var(--clr-primary);
  transition: width 0.2s ease-in;
}

.link:hover::before,
.link:focus::before {
  width: 100%;
}

.link--nav {
  color: var(--clr-fg);
  text-transform: lowercase;
  font-weight: 500;
}

.link--icon {
  color: var(--clr-fg);
  font-size: 1.2rem;
}

.btn {
  display: block;
  padding: 0.8em 1.4em;
  font-weight: 500;
  font-size: 0.9rem;
  text-transform: lowercase;
  transition: transform 0.2s ease-in-out;
}

.btn--outline {
  color: var(--clr-primary);
  border: 2px solid var(--clr-primary);
  position: relative;
  overflow: hidden;
  z-index: 0;
}

.btn--outline:focus,
.btn--outline:hover {
  color: var(--clr-bg);
}

.btn--outline:before {
  content: "";
  position: absolute;
  background-color: var(--clr-primary);
  right: 100%;
  bottom: 0;
  left: 0;
  top: 0;
  z-index: -1;
  transition: right 0.2s ease-in-out;
}

.btn--outline:hover::before,
.btn--outline:focus::before {
  right: 0;
}

.btn--plain {
  text-transform: initial;
  background-color: var(--clr-bg-alt);
  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
  border: 0;
}

.btn--plain:hover {
  transform: translateY(-4px);
}

.btn--icon {
  padding: 0;
  font-size: 1.2rem;
}

.btn--icon:hover,
.btn--icon:focus {
  color: var(--clr-primary);
}

.btn--icon:active {
  transform: translateY(-5px);
}

.sticky-nav {
  position: sticky;
  top: 0;
  z-index: 100;
}
/*========
  layout
========*/
#badges {
  display: flex;
  justify-content: flex-start;
}
.profilepic {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  display: flex;
  align-items: center;
}

.projectpic {
  width: 150px;
  height: 140px;
  border-radius: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  box-shadow: 5px 2px 2px #444;
}

.center {
  display: flex;
  align-items: center;
}

.header {
  height: 4em;
  max-width: 1100px;
  width: 95%;
  margin: 0 auto;
  justify-content: space-between;
}

main {
  max-width: 1100px;
  width: 95%;
  margin: 0 auto;
}

.section {
  margin-top: 5em;
}

.section__title {
  text-align: center;
  margin-bottom: 1em;
  text-transform: uppercase;
}

.nav__list {
  margin-right: 1.5em;
  display: flex;
}

.nav__list-item {
  margin-left: 1.5em;
}

.nav__hamburger {
  display: none;
  width: 1em;
}

.about {
  flex-direction: column;
  margin-top: 3em;
}

.about__name {
  color: var(--clr-primary);
}

.about__role {
  margin-top: 1.2em;
}

.about__desc {
  font-size: 1rem;
  max-width: 600px;
}

.about__desc,
.about__contact {
  margin-top: 2.4em;
}

.about .link--icon {
  margin-right: 0.8em;
}

.about .btn--outline {
  margin-right: 1em;
}

.projects__grid {
  max-width: 1100px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
  grid-gap: 2em;
}

.project {
  padding: 2em;
  margin: 0 auto;
  text-align: center;
  box-shadow: var(--shadow);
  transition: transform 0.2s linear;
}

.project:hover {
  transform: translateY(-7px);
}

.project__description {
  margin-top: 1em;
}

.project__stack {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1.2em 0;
}

.project__stack-item {
  margin: 0.5em;
  font-weight: 500;
  font-size: 0.8rem;
  color: var(--clr-fg-alt);
}

.project .link--icon {
  margin-left: 0.5em;
}

.skills__list {
  max-width: 450px;
  width: 95%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.skills__list-item {
  margin: 0.2em;
}

.contact {
  flex-direction: column;
}

.footer {
  padding: 3em 0;
  margin-top: 4em;
  text-align: center;
}

.footer__link {
  font-size: 0.9rem;
  font-weight: 700;
  color: var(--clr-fg);
}

.scroll-top {
  position: fixed;
  bottom: 1em;
  right: 2em;
  background-color: transparent;
  font-size: 1.8rem;
  transition: transform 0.2s ease-in-out;
}

@media (max-width: 600px) {
  .header {
    height: 6em;
  }

  .section {
    margin-top: 4em;
  }

  .nav__list {
    flex-direction: column;
    padding: 4em 0;
    position: absolute;
    right: 0;
    left: 0;
    top: 5em;
    background-color: var(--clr-bg);
    width: 0;
    overflow: hidden;
    transition: width 0.2s ease-in-out;
  }

  .display-nav-list {
    width: 100%;
  }

  .nav__list-item {
    margin: 0.5em 0;
  }

  .nav__hamburger {
    display: flex;
    margin-left: 0.8em;
     margin-top: 0.5px; 
  }

  .header {
    position: relative;
    padding: 0.5rem 0.5rem; 
  }
  .nav-container {
    display: flex;
    align-items: center;
  }
  .about {
    align-items: flex-start;
    margin-top: 2em;
  }

  .footer {
    padding: 2em;
    margin-top: 3em;
  }
}

/*=============================================
=            Form and Modal           =
=============================================*/
dialog {
  z-index: 10;
  margin: auto;
  background: #0874f0;
  border: none;
  border-radius: 0.2rem;
}
[page-modal]::backdrop {
  background-color: hsla(0, 0%, 0%, 0.5);
}
.formcarry-container {
  box-sizing: border-box;
  margin: 40px auto 0 auto;
  padding: 10;
  font-family: "Josefin Sans", sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: -0.01em;

  width: 400px;

  /* NORMAL */
  --fc-border-color: #eceff9;
  --fc-normal-text-color: #0e0b3d;
  --fc-normal-placeholder-color: #b3b8d0;

  /* PRIMARY COLOR | HSL FORMAT*/
  --fc-primary-color-hue: 201;
  --fc-error-color-hue: 356;
  --fc-primary-hsl: var(--fc-primary-color-hue), 100%, 54%;
  --fc-error-hsl: var(--fc-error-color-hue), 100%, 54%;

  /* HOVER */
  --fc-field-hover-bg-color: #f7f9fc;
  --fc-border-hover-color: #dde0ee;
  --fc-field-hover-text-color: #b3b8d0;

  --fc-border-active-color: #1463ff;
}

.formcarry-container * {
  box-sizing: border-box;
}

.formcarry-container label {
  display: block;
  cursor: pointer;
}

.formcarry-container .formcarry-block:not(:first-child) {
  margin-top: 16px;
}

/*=============================================
=            Fields           =
=============================================*/

.formcarry-container input,
.formcarry-container textarea,
.formcarry-container select {
  margin-top: 4px;
  width: 100%;
  height: 42px;
  border: 1px solid var(--fc-border-color);
  color: var(--fc-normal-text-color);
  border-radius: 2px;
  padding: 8px 12px;

  font-family: "Josefin Sans", sans-serif;
  font-size: 14px;
  transition: 125ms background, 125ms color, 125ms box-shadow;
}

.formcarry-container textarea {
  min-height: 188px;
  max-width: 100%;
  padding-top: 12px;
}

.formcarry-container input::placeholder,
.formcarry-container textarea::placeholder,
.formcarry-container select::placeholder {
  color: var(--fc-normal-placeholder-color);
}

.formcarry-container input:hover,
.formcarry-container textarea:hover,
.formcarry-container select:hover {
  border-color: var(--fc-border-hover-color);
  background-color: var(--fc-field-hover-bg-color);
}

.formcarry-container input:hover::placeholder,
.formcarry-container textarea:hover::placeholder,
.formcarry-container select:hover::placeholder {
  color: var(--fc-field-hover-text-color);
}

.formcarry-container input:focus,
.formcarry-container textarea:focus,
.formcarry-container select:focus {
  background-color: #fff;
  border-color: hsl(var(--fc-primary-hsl));
  box-shadow: hsla(var(--fc-primary-hsl), 8%) 0px 0px 0px 3px;
  outline: none;
}

.formcarry-container select {
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.9997 14.5001L8.46387 10.9642L9.64303 9.78589L11.9997 12.1434L14.3564 9.78589L15.5355 10.9642L11.9997 14.5001Z' fill='%236C6F93'/%3E%3C/svg%3E%0A");
  /* background-position: calc(100% - 20px) calc(1em + 4px), calc(100% - 15px) calc(1em + 4px); */
  background-size: 24px 24px;
  background-position: 98%;
  background-repeat: no-repeat;
  appearance: none;
  -webkit-appearance: none;
}

.formcarry-container button {
  margin: 2px 0;
  font-family: "Josefin Sans", sans-serif;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: -0.02em;
  height: 42px;
  line-height: 40px;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
  border: 1px solid hsla(var(--fc-primary-hsl));
  background-color: hsla(var(--fc-primary-hsl));
  color: #fff;
  cursor: pointer;
}

.formcarry-container button {
  font-family: "Josefin Sans", sans-serif;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: -0.02em;
  height: 40px;
  line-height: 24px;
  width: 100%;
  border: 0;
  border-radius: 2px;
  box-sizing: border-box;
  background-color: hsla(var(--fc-primary-hsl));
  color: #fff;
  cursor: pointer;
  box-shadow: 0 0 0 0 transparent;

  transition: 125ms all;
}

.formcarry-container button:hover {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
    hsla(var(--fc-primary-hsl));
}

.formcarry-container button:focus {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    hsla(var(--fc-primary-hsl));
  border-inline: 1px solid inline rgba(255, 255, 255, 0.6);
  box-shadow: 0px 0px 0px 3px rgba(var(--fc-primary-hsl), 12%);
}

.formcarry-container button:active {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    hsla(var(--fc-primary-hsl));
}

.formcarry-container button:disabled {
  background-color: hsla(var(--fc-primary-hsl), 40%);
  cursor: not-allowed;
}

.formcarry-container input:focus:required:invalid,
.formcarry-container input:focus:invalid,
.formcarry-container select:focus:required:invalid,
.formcarry-container select:focus:invalid {
  color: hsl(var(--fc-error-hsl));
  border-color: hsl(var(--fc-error-hsl));
  box-shadow: 0px 0px 0px 3px hsla(var(--fc-error-hsl), 12%);
}
#un-static {
  margin: auto;
}

/*=====  End of Fields  ======*/

/* .modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 20px;
  max-width: 500px;
  width: 90%;
  max-height: 90vh;
  overflow-y: auto;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
} */

